--- a/beamerthemebeunitn.sty
+++ b/beamerthemebeunitn.sty
@@ -1,19 +1,19 @@
 \mode<presentation>
 
-% Requirement
+% ---- [PACCHETTI RICHIESTI] -------------------------
 \RequirePackage{graphicx}
 \RequirePackage{tikz}
 %\RequirePackage{fontspec}
 
 
 
-% Settings
-
-%Soluzione temporanea per i test
+% ---- [IMPOSTAZIONI] -------------------------
+% todo: questa è una soluzione temporanea per i test
 %\usepackage{../../beamerinnerthemebeunitn}
 %\usepackage{../../beamerouterthemebeunitn}
 %\usepackage{../../beamercolorthemebeunitn}
-%%%
+% fine todo --
+
 \useinnertheme{beunitn}
 \useoutertheme{beunitn}
 \usecolortheme{beunitn}
