--- a/beamerouterthemebeunitn.sty
+++ b/beamerouterthemebeunitn.sty
@@ -38,6 +38,8 @@
     % CORREZIONE ALTEZZA TESTO (via sporco trucco):
     \vspace*{.9cm}
 }
+
+% minimal working example per il titolo:
 %\setbeamertemplate{frametitle}{
 %\vspace*{4mm}\hspace*{0mm}\insertframetitle \vspace*{1cm}}
 
