--- a/beamerthemebeunitn.sty
+++ b/beamerthemebeunitn.sty
@@ -5,7 +5,38 @@
 \RequirePackage{tikz}
 %\RequirePackage{fontspec}
 
+%Option definition
 
+%Base case
+\definecolor{dark-color}{RGB}{80,99,39}
+\definecolor{light-color}{RGB}{120,145,61}
+\definecolor{light-gray}{RGB}{220,224,212}
+\definecolor{example-color}{RGB}{91,184,169}
+\definecolor{alert-color}{RGB}{0,250,0}
+\newcommand{\logosec}{logo_math}
+
+
+%case math
+\DeclareOption{math}{
+\definecolor{dark-color}{RGB}{80,99,39}
+\definecolor{light-color}{RGB}{120,145,61}
+\definecolor{light-gray}{RGB}{220,224,212}
+\definecolor{example-color}{RGB}{91,184,169}
+\definecolor{alert-color}{RGB}{245,181,115}
+\renewcommand{\logosec}{logo_math}
+}
+
+%case math
+\DeclareOption{physics}{
+\definecolor{dark-color}{RGB}{42,84,66}
+\definecolor{light-color}{RGB}{60,117,92}
+\definecolor{light-gray}{RGB}{220,224,212}
+\definecolor{example-color}{RGB}{91,184,169}
+\definecolor{alert-color}{RGB}{245,181,115}
+\renewcommand{\logosec}{logo_new}
+}
+
+\ProcessOptions
 
 % Settings
 
@@ -14,6 +45,7 @@
 %\usepackage{../../beamerouterthemebeunitn}
 %\usepackage{../../beamercolorthemebeunitn}
 %%%
+
 \useinnertheme{beunitn}
 \useoutertheme{beunitn}
 \usecolortheme{beunitn}
@@ -21,5 +53,10 @@
 
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{blocks}[rounded][shadow=true]
+
+
+%Spazi testo
+\setlength{\parskip}{0.5em}
+\linespread{1.15}
 
 \mode<all>
