--- a/beamerinnerthemebeunitn.sty
+++ b/beamerinnerthemebeunitn.sty
@@ -5,8 +5,8 @@
 %\setbeamertemplate{background}{
 %  \begin{tikzpicture}
 %  \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
-%  \fill[color=dark-math] (0,8.65) to[out = 0 , in = 170 ] (\the\paperwidth,7.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ;
-%  \fill[color=light-math ] (5,29.1) to[out = 0 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  -- (0,\the\paperheight) ;
+%  \fill[color=dark-color] (0,8.65) to[out = 0 , in = 170 ] (\the\paperwidth,7.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ;
+%  \fill[color=light-color ] (5,29.1) to[out = 0 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  -- (0,\the\paperheight) ;
 %  
 %  \node[inner sep=0pt] (logo) at (12.0,8.8)
 %      {\includegraphics[width=1.3cm]{images/logo_white.png}};
@@ -17,9 +17,9 @@
 %\setbeamertemplate{background}{
 %  \begin{tikzpicture}
 %  \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
-%  \fill[color=dark-math] (0,8.65) to[out = 0 , in = 170 ] (\the\paperwidth,7.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ;
-%  \fill[color=light-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 290 ] (10.1,\the\paperheight) ;
-%  \fill[color=dark-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
+%  \fill[color=dark-color] (0,8.65) to[out = 0 , in = 170 ] (\the\paperwidth,7.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ;
+%  \fill[color=light-color ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 290 ] (10.1,\the\paperheight) ;
+%  \fill[color=dark-color ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
 %  
 %  \node[inner sep=0pt] (logo) at (12.0,8.8)
 %      {\includegraphics[width=1.3cm]{images/logo_white.png}};
@@ -32,21 +32,21 @@
   \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
 	\ifx\insertframetitle\@empty%
 		  	{
-		  	\fill[color=light-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 290 ] (10.1,\the\paperheight) ;
-		  	\fill[color=dark-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
+		  	\fill[color=light-color ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 290 ] (10.1,\the\paperheight) ;
+		  	\fill[color=dark-color ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
 		  	}
 	 \else
-	  { \fill[color=dark-math] (0,8.65) to[out = 0 , in = 170 ] (\the\paperwidth,7.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ;
-	  \fill[color=light-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 0 ] (0,8.8) -- (0 , \the\paperheight);
-	   \fill[color=dark-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
+	  { \fill[color=dark-color] (0,8.65) to[out = 0 , in = 170 ] (\the\paperwidth,7.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ;
+	  \fill[color=light-color ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 0 ] (0,8.8) -- (0 , \the\paperheight);
+	   \fill[color=dark-color ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
 	  }
   	\fi
   	\node[inner sep=0pt] (logo) at (12.05,8.85)
       {\includegraphics[width=1.3cm]{images/logo_white.png}}; %Logo at high right
   	\ifnum\thepage=1\relax%
 	 		\fill[white,opacity=1] (0,0) rectangle(\the\paperwidth,\the\paperheight); % Cleaning for first page
-	 		\fill[color=light-math] (0,7.2) to[out = 0 , in = 0 ] (\the\paperwidth,8.5)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ; 
-	 		 \fill[color=dark-math] (0,7.5) to[out = 0 , in = 0 ] (\the\paperwidth,8.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ; 
+	 		\fill[color=light-color] (0,7.2) to[out = 0 , in = 0 ] (\the\paperwidth,8.5)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ; 
+	 		 \fill[color=dark-color] (0,7.5) to[out = 0 , in = 0 ] (\the\paperwidth,8.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ; 
 	 		\node[inner sep=0pt] (logonome) at (2.8,8.7)
 	 		      {\includegraphics[width=5.5cm]{images/logonome_white.png}};
 	 		\node[inner sep=0pt] (logo) at (12,2)
@@ -130,13 +130,13 @@
 \setbeamertemplate{background}{
   \begin{tikzpicture}
   \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
-  \fill[color=light-math] (0,4.5) rectangle (\the\paperwidth,6) ;
-  \fill[color=dark-math ] (0,4.9) rectangle (\the\paperwidth,4.5) ;
+  \fill[color=light-color] (0,4.5) rectangle (\the\paperwidth,6) ;
+  \fill[color=dark-color ] (0,4.9) rectangle (\the\paperwidth,4.5) ;
   % Prograss bar
    \draw[color = light-gray , thick] (1,3.7) -- (11.8 , 3.7);
-   \draw[color = dark-math, thick] (1,3.7) -- ({1+(\thepage)/(\insertdocumentendpage)*10.8} , 3.7);
+   \draw[color = dark-color, thick] (1,3.7) -- ({1+(\thepage)/(\insertdocumentendpage)*10.8} , 3.7);
   \node[inner sep=0pt] (images/logo.png) at (6.4,7)
-      {\includegraphics[width=1.5cm]{images/logo_math.png}};
+      {\includegraphics[width=1.5cm]{images/\logosec}};
   \end{tikzpicture}
 }
 \frame{\sectionpage}
