--- a/tests/test2_(longer)/example2.tex
+++ b/tests/test2_(longer)/example2.tex
@@ -21,7 +21,7 @@
 %\usepackage{../../beamerthemebeunitn}
 
 \usefolder{../../}
-\usetheme{beunitn}
+\usetheme[physics]{beunitn}
 
 \usepackage[italian]{babel}
 \usepackage[utf8]{inputenc}
@@ -50,22 +50,6 @@
 
 \section{Titolo sezione numero 1}
 
-\begin{frame}
-	Proviamo l'\alert{alert}
-	\pause
-	\begin{alertblock}{Titolo}
-	Che blocco rosso
-	\end{alertblock}
-\end{frame}
-
-
-\begin{frame}{Example Block}
-	Ok proviamo un blocco:
-	\begin{exampleblock}{Una bella formula}
-		Questa è una bellissima formula:
-		\[ e^{\pi i} + 1 = 0\]
-	\end{exampleblock}
-\end{frame}
 
 \begin{frame}{Questo è un frame}
     \begin{block}{Un blocco di testo importante}
@@ -113,7 +97,7 @@
 \end{frame}
 
 \begin{frame}{Conclusione}
-    Iniziamo con un alertblock per attirare l'attenzione \dots
+    Iniziamo con un \alert{alertblock} per attirare l'attenzione \dots
     \begin{alertblock}{Una frase profonda e filosofica}
         \lipsum[66]
     \end{alertblock}
