--- a/tests/test2_(longer)/example2.tex
+++ b/tests/test2_(longer)/example2.tex
@@ -21,7 +21,7 @@
 %\usepackage{../../beamerthemebeunitn}
 
 \usefolder{../../}
-\usetheme{beunitn}
+\usetheme[physics]{beunitn}
 
 \usepackage[italian]{babel}
 \usepackage[utf8]{inputenc}
@@ -40,7 +40,7 @@
 \begin{document}
 % c'è un overfull hbox, ma tanto è solo un dummy test
 
-\begin{frame}[fragile]
+\begin{frame}
   \titlepage
 \end{frame}
 
@@ -96,7 +96,7 @@
 \end{frame}
 
 \begin{frame}{Conclusione}
-    Iniziamo con un alertblock per attirare l'attenzione \dots
+    Iniziamo con un \alert{alertblock} per attirare l'attenzione \dots
     \begin{alertblock}{Una frase profonda e filosofica}
         \lipsum[66]
     \end{alertblock}
