--- a/beamerouterthemebeunitn.sty
+++ b/beamerouterthemebeunitn.sty
@@ -12,7 +12,7 @@
 %  \begin{tikzpicture}
 %  \useasboundingbox[](0,0) rectangle(\the\paperwidth,1.2);
 %   \ifx\insertframesubtitle\@empty%
-%      {\node[anchor=west, dark-math,font=\textbf\large] at (0.2,0.61){\insertframetitle};}
+%      {\node[anchor=west, dark-color,font=\textbf\large] at (0.2,0.61){\insertframetitle};}
 %      \else%
 %      {\node[anchor= west, black,font=\large] at (1.2,0.81){\insertframetitle};%
 %       \node[anchor= west, black,font=\small] at (1.2,0.41){\insertframesubtitle};}%
