--- a/beamercolorthemebeunitn.sty
+++ b/beamercolorthemebeunitn.sty
@@ -1,24 +1,28 @@
 \mode<presentation>
 
 % ---- [COLORI] -------------------------
+% todo: controllare se ho cambiato tutti i richiami ai colori
+% "[tipo]-math" in "[tipo]-color".
+
 % nuovi colori:
-\definecolor{dark-math}{RGB}{80,99,39}
-\definecolor{light-math}{RGB}{120,145,61}
-\definecolor{light-gray}{RGB}{220,224,212}
+% ATTENZIONE: definizioni spostate in beamerthemeunitn.sty
+% \definecolor{dark-math}{RGB}{80,99,39}
+% \definecolor{light-math}{RGB}{120,145,61}
+% \definecolor{light-gray}{RGB}{220,224,212}
 
 % utilizzo colori:
-\setbeamercolor*{title page header}{fg=dark-math}
+\setbeamercolor*{title page header}{fg=dark-color}
 \setbeamercolor*{author}{fg=black}
 \setbeamercolor*{date}{fg=black}
 \setbeamercolor{frametitle}{fg=white}
 
-\setbeamercolor{palette primary}{fg=dark-math}
+\setbeamercolor{palette primary}{fg=dark-color}
 \setbeamercolor{palette secondary}{fg=black}
-\setbeamercolor{palette tertiary}{fg=light-math}
+\setbeamercolor{palette tertiary}{fg=light-color}
 \setbeamercolor{palette quaternary}{fg=black}
-\setbeamercolor{structure}{fg=dark-math} % itemize, enumerate, ...
-\setbeamercolor{section in toc}{fg=dark-math} % TOC sections
-\setbeamercolor{subsection in toc}{fg=light-math} % TOC sections
+\setbeamercolor{structure}{fg=dark-color} % itemize, enumerate, ...
+\setbeamercolor{section in toc}{fg=dark-color} % TOC sections
+\setbeamercolor{subsection in toc}{fg=light-color} % TOC sections
 
 \setbeamercolor{subsection in head/foot}{fg=black}
 
