--- a/beamercolorthemebeunitn.sty
+++ b/beamercolorthemebeunitn.sty
@@ -1,6 +1,6 @@
 \mode<presentation>
 
-% ---- [COLORI] -------------------------
+% ---- [COLORI STRUTTURA] -------------------------
 % todo: controllare se ho cambiato tutti i richiami ai colori
 % "[tipo]-math" in "[tipo]-color".
 
@@ -32,6 +32,14 @@
 \setbeamertemplate{items}[square]
 \setbeamertemplate{sections/subsections in toc}[square]
 
+
+
+% ---- [COLORI TESTO] -------------------------
 \usepackage{beamercolorthemerose}
+
+\setbeamercolor{normal text}{fg=black,bg=white}
+\setbeamercolor{alerted text}{fg=alert-color}
+\setbeamercolor{example text}{fg=example-color}
+\setbeamercolor{structure}{fg=dark-color}
 
 \mode<all>
